# Hardcode-Tray

./: .editorconfig  .gitignore  .kateconfig  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  Hardcode-Tray.kateproject  Hardcode-Tray.wpr  LICENSE  MANIFEST.in  README.md  circle.yml  meson.build  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/: pull.yml
HardcodeTray/: __init__.py  app.py  enum.py  tools.py  utils.py
HardcodeTray/modules/: __init__.py  backup.py  icon.py  parser.py  path.py
HardcodeTray/modules/applications/: __init__.py  application.py  nwjs.py  zip.py
HardcodeTray/modules/applications/helpers/: TelegramDesktop.sh  __init__.py  asar.py  data_pack.py
HardcodeTray/modules/config/: __init__.py  arguments.py  system.py
HardcodeTray/modules/svg/: __init__.py  inkscape.py
data/: config.json
data/database/: acestream.json  android-messages-desktop.electron.json  bitwarden.electron.json  chromium.json  google-chrome.json  joplin.json  keybase.json  kvirc.json  motrix-git.json  motrix.electron.json  mullvad.electron.json  mx-updater.json  namecoin.json  nixnote.json  pb-for-desktop.json  protonmail.json  signal.electron.json  skypeforlinux.json  spotify-linux.json  tartube.json  teams.json  tweet-tray.electron.json  utools.electron.json  veracrypt.json  vivaldi.json  vk.json  wire.electron.json  wire.json  yd-tools.json
debian/: changelog  control  copyright  get-version  rules  watch
debian/patches/: 00-man-file.patch  000-man-file.patch  001-meson-build.patch  series
debian/source/: lintian-overrides
debian/upstream/: metadata
po/: LINGUAS
tests/: pylint.sh
